pkg/main/default/objects/LogSettings__c/LogSettings__c.object-meta.xml
<CustomObject>
	<customSettingsType>Hierarchy</customSettingsType>
	<label>Log Settings</label>
</CustomObject>