pkg/main/default/objects/LogSettings__c/fields/Level__c.field-meta.xml
<CustomField>
	<fullName>Level__c</fullName>
	<label>Level</label>
	<length>20</length>
	<type>Text</type>
</CustomField>