pkg/main/default/objects/LogSettings__c/fields/MaximumAgeDays__c.field-meta.xml
<CustomField>
	<fullName>MaximumAgeDays__c</fullName>
	<defaultValue>90</defaultValue>
	<description>Maximum log age (days)</description>
	<inlineHelpText>Maximum log age (days)</inlineHelpText>
	<label>Maximum log age (days)</label>
	<precision>10</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>