pkg/main/default/objects/LogSettings__c/fields/MaximumRecords__c.field-meta.xml
<CustomField>
	<fullName>MaximumRecords__c</fullName>
	<defaultValue>1000</defaultValue>
	<description>Maximum log records</description>
	<inlineHelpText>Maximum log records</inlineHelpText>
	<label>Maximum log records</label>
	<precision>10</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>